--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "cheerio": "^1.0.0-rc.3",
     "codemon": "^0.1.31-development",
     "express": "^4.17.1",
+    "gh-pages": "^2.2.0",
     "mongodb": "^3.5.5",
     "s": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "deploy": "gh-pages -d ./"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,6 @@
   "bugs": {
     "url": "https://github.com/melfaiz/marocovid19/issues"
   },
-  "homepage": "https://github.com/melfaiz/marocovid19#readme",
+  "homepage": "https://melfaiz.github.io/API-Covid19",
   "description": ""
 }
